H1 adde to index.html

--- a/ext-systems/city-register/src/main/webapp/index.html
+++ b/ext-systems/city-register/src/main/webapp/index.html
@@ -5,6 +5,7 @@
     <title>City Register</title>
 </head>
 <body>
+    <h1>City Register</h1>
     <strong>Hello, world!!!</strong>
 </body>
 </html>
