Added link to ckeck person page

--- a/ext-systems/city-register/src/main/webapp/index.html
+++ b/ext-systems/city-register/src/main/webapp/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>City Register</h1>
-    <strong>Hello, world!!!</strong>
+    <h3>Hello, world!!!</h3>
+
+    <a href="checkPerson">Check Person</a>
 </body>
 </html>
