Added for for check person

--- a/ext-systems/city-register/src/main/webapp/index.html
+++ b/ext-systems/city-register/src/main/webapp/index.html
@@ -6,7 +6,11 @@
 </head>
 <body>
     <h1>City Register</h1>
-    <h3>Hello, world!!!</h3>
+
+    <form action="checkPerson" method="get">
+        SurName: <input type="text" name="surName" />
+        <input type="submit" value="Check" />
+    </form>
 
     <a href="checkPerson">Check Person</a>
 </body>
