Implemented all fields for person check

--- a/ext-systems/city-register/src/main/webapp/index.html
+++ b/ext-systems/city-register/src/main/webapp/index.html
@@ -8,7 +8,22 @@
     <h1>City Register</h1>
 
     <form action="checkPerson" method="get">
-        SurName: <input type="text" name="surName" />
+        <label for="surName">Surname: </label>
+        <input id="surName" type="text" name="surName" /><br />
+        <label for="givenName">Given name: </label>
+        <input id="givenName" type="text" name="givenName" /><br />
+        <label for="patronymic">Patronymic: </label>
+        <input id="patronymic" type="text" name="patronymic" /><br />
+        <label for="dateOfBirth">Date of birth: </label>
+        <input id="dateOfBirth" type="text" name="dateOfBirth" /><br />
+        <label for="streetCode">Street Code: </label>
+        <input id="streetCode" type="text" name="streetCode" /><br />
+        <label for="building">Building: </label>
+        <input id="building" type="text" name="building" /><br />
+        <label for="extension">Extension: </label>
+        <input id="extension" type="text" name="extension" /><br />
+        <label for="apartment">Apartment: </label>
+        <input id="apartment" type="text" name="apartment" /><br />
         <input type="submit" value="Check" />
     </form>
 </body>
